--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,15 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+yarn.lock
+
+.env
+.eslintignore
+.eslintrc
+.prettierignore
+.prettierrc
+
+package-lock.json
+
+public/images/*
