--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
     "sass": "^1.56.1",
