--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.7.1",
+    "ramda": "^0.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.6.1",
     "sass": "^1.56.1",
     "scss": "^0.2.4",
     "web-vitals": "^2.1.4"
