--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ package-lock.json
 public/images/*
 public/03-shop-img
 public/05-member/*
+public/06-event-img/*
 
 src/02-forum/p-imgs
 src/06-event/img/*
