--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-leaflet/core": "^2.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,17 +18,17 @@
     "http-proxy-middleware": "^2.0.6",
     "leaflet": "^1.9.2",
     "prettier": "^2.7.1",
+    "prop-types": "^15.8.1",
     "query-string": "^7.1.1",
     "ramda": "^0.28.0",
-    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-leaflet": "^4.1.0",
+    "react-leaflet": "^4.2.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
-    "react-slick": "^0.29.0",
     "react-select": "^5.6.1",
+    "react-slick": "^0.29.0",
     "sass": "^1.56.1",
     "scss": "^0.2.4",
     "slick-carousel": "^1.8.1",
