--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ramda": "^0.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-leaflet": "^4.1.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.4.3",
