--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-draggable": "^4.4.5",
     "react-leaflet": "^4.1.0",
     "react-modal": "^3.16.1",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
     "react-select": "^5.6.1",
