--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.6.1",
     "react-slick": "^0.29.0",
+    "react-spring": "^9.5.5",
     "sass": "^1.56.1",
     "scss": "^0.2.4",
     "slick-carousel": "^1.8.1",
