--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "http-proxy-middleware": "^2.0.6",
     "leaflet": "^1.9.2",
+    "lodash": "^4.17.21",
     "prettier": "^2.7.1",
     "prop-types": "^15.8.1",
     "query-string": "^7.1.1",
