--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "query-string": "^7.1.1",
     "ramda": "^0.28.0",
     "react": "^18.2.0",
+    "react-animated-3d-card": "^1.0.2",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-leaflet": "^4.1.0",
@@ -39,7 +40,7 @@
     "react-select": "^5.6.1",
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.7",
-    "react-spring": "^9.5.5",
+    "react-spring": "6.1.8",
     "sass": "^1.56.1",
     "scss": "^0.2.4",
     "slick-carousel": "^1.8.1",
